--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
     <section id="about">
         <div class="about-content">
-            <h2>I’m Kshitij, a professional video editor & film maker</h2>
+            <h2>I’m XYZ, a professional video editor & film maker</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipiscing elit Ut et massa mi. Aliquam in hendrerit urna. Pellentesque sit amet sapien fringilla, mattis ligula consectetur, ultrices mauris. Maecenas vitae mattis tellus. Nullam quis imperdiet augue. Vestibulum auctor ornare leo, non suscipit magna interdum eu.</p>
             <a href="#services" class="btn">Read More</a>
         </div>
@@ -114,7 +114,7 @@
                     <source src="editing_video6.mp4" type="video/mp4">
                     Your browser does not support the video tag.
                 </video>
-                <p>Cityscape - 2022 Film</p>
+                <p>Lemon - 2022 Film</p>
             </div>
         </div>
     </section>
@@ -126,8 +126,8 @@
                 <p>Lorem ipsum dolor sit amet consectetur adipiscing elit Ut et massa mi. Aliquam in hendrerit urna. Pellentesque sit amet sapien fringilla, mattis ligula consectetur, ultrices mauris.</p>
                 <ul class="contact-details">
                     <li><i class="fas fa-phone"></i> 123-456-7890</li>
-                    <li><i class="fas fa-envelope"></i> kshitij@gmail.com</li>
-                    <li><i class="fas fa-map-marker-alt"></i> Roorkee, Uttarakhand, India</li>
+                    <li><i class="fas fa-envelope"></i> XYZ@gmail.com</li>
+                    <li><i class="fas fa-map-marker-alt"></i> Delhi, India</li>
                 </ul>
             </div>
             <div class="contact-form">
