--- a/index.html
+++ b/index.html
@@ -131,12 +131,12 @@
                 </ul>
             </div>
             <div class="contact-form">
-                <form>
+                <!-- <form>
                     <input type="text" name="name" placeholder="Full Name">
                     <input type="email" name="email" placeholder="Email Address">
                     <textarea name="message" placeholder="Message"></textarea>
                     <button type="submit" class="btn">Submit</button>
-                </form>
+                </form> -->
             </div>
         </div>
     </section>
