--- a/index.html
+++ b/index.html
@@ -124,9 +124,9 @@
                 <h2>Let's work together</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipiscing elit Ut et massa mi. Aliquam in hendrerit urna. Pellentesque sit amet sapien fringilla, mattis ligula consectetur, ultrices mauris.</p>
                 <ul class="contact-details">
-                    <li><i class="fas fa-phone"></i> 123-456-7890</li>
-                    <li><i class="fas fa-envelope"></i> XYZ@gmail.com</li>
-                    <li><i class="fas fa-map-marker-alt"></i> Delhi, India</li>
+                    <li><i class="phone-number"></i> 123-456-7890</li>
+                    <li><i class="email-name"></i> XYZ@gmail.com</li>
+                    <li><i class="location-name"></i> Delhi, India</li>
                 </ul>
             </div>
             <div class="contact-form">
