--- a/index.html
+++ b/index.html
@@ -43,17 +43,17 @@
         <h2>I can help you with</h2>
         <div class="services-container">
             <div class="service-item">
-                <img src="https://encrypted-tbn2.gstatic.com/images?q=tbn:ANd9GcTlgw6Z9i5WIQTN-abJOmZeZiN5PXlMas7Mm13QzU8EMYi_BBp1" alt="Editing">
+                <img src="editing_image1.jpg" alt="Editing">
                 <h3>Editing</h3>
                 <p>Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur</p>
             </div>
             <div class="service-item">
-                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS-mUaSgdpKfd380vMf2p64ugR5pT4dDRODQdohXEDOJuuiQ5gD" alt="Color Correction">
+                <img src="editing_image2.jpg" alt="Color Correction">
                 <h3>Color Correction</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipiscing elit Ut et massa mi. Aliquam in hendrerit urna. Pellentesque sit amet sapien fringilla, mattis ligula consectetur</p>
             </div>
             <div class="service-item">
-                <img src="https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcRqyMUFKguf5doKe-obQJb5rHJlPZS0vVyN7lFpqee5pnS1kCDi" alt="Sound Design">
+                <img src="editing_image4.jpg" alt="Sound Design">
                 <h3>Sound Design</h3>
                 <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore</p>
             </div>
@@ -125,7 +125,7 @@
                 <p>Lorem ipsum dolor sit amet consectetur adipiscing elit Ut et massa mi. Aliquam in hendrerit urna. Pellentesque sit amet sapien fringilla, mattis ligula consectetur, ultrices mauris.</p>
                 <ul class="contact-details">
                     <li><i class="phone-number"></i> 123-456-7890</li>
-                    <li><i class="email-name"></i> XYZ@gmail.com</li>
+                    <li><i class="email-name"></i> XYZ @ gmil.com</li>
                     <li><i class="location-name"></i> Delhi, India</li>
                 </ul>
             </div>
